--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,10 @@ dependencies:
 
  # window_manager: ^0.3.9
   pdf: ^3.10.8
-  path_provider: ^2.1.2
+ # path_provider: ^2.1.2
   file_picker: ^6.2.1
   shared_preferences: ^2.2.2
-  printing: ^5.12.0
+  #printing: ^5.12.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
